k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
    - port: PORT
      targetPort: APIPORT
